fixed bug: json data now gets overflowed in body

--- a/src/components/display/Display.css
+++ b/src/components/display/Display.css
@@ -1,4 +1,5 @@
 .Display {
     background-color: cornsilk;
     height: 30vw;
+    overflow:auto;
 }
